Fix User/Dev Search href. Fix Game Reviews css. Add Line Truncate for Game Reviews.

--- a/game-recommender/src/main/resources/static/css/main.css
+++ b/game-recommender/src/main/resources/static/css/main.css
@@ -84,3 +84,12 @@ table .btn {
 .game-profile-image {
 	 border: grey 5px groove;
 }
+
+/* Description */
+
+.line-truncate-3 {
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
